# immich-adapter

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json
.agents/daemons/: AGENTS.md
.claude/: settings.json
.claude/hooks/: pre-push-checks.sh
.github/: zizmor.yml
.github/workflows/: api-compatibility.yml  ci.yml  zizmor.yml
config/: exceptions.py  immich_version.py  logging.py  sentry.py  settings.py
docs/architecture/: adapter-architecture.md  session-checkpoint-implementation.md  sync-stream-architecture.md  websocket-implementation.md
docs/design-docs/: auth-design.md  checksum-support.md  immich-adapter-gap-analysis.md  immich-auth-architecture.md  immich-v3-api-changes.md  large-upload-timeout.md  render-deploy-docker.md  static-file-sharing.md  sync-stream-event-ordering.md  trash-soft-delete-adapter.md
docs/guides/: deploying-to-render.md  importing-with-immich-go.md  running-with-immich-mobile.md  running-with-immich-web.md
docs/references/: code-practices.md  development-tools.md  immich-monitoring.md  immich-sync-communication.md  session-checkpoint-reference.md  uvicorn-settings.md  websocket-events-reference.md
routers/: immich_models.py  models.py  static.py  well_known.py
routers/api/: activities.py  admin.py  albums.py  api_keys.py  assets.py  auth.py  constants.py  download.py  duplicates.py  faces.py  jobs.py  libraries.py  map.py  memories.py  notifications.py  (+17 more)
scripts/: extract-immich-web.py  pre-push-checks.sh  pre-push-checks_test.sh
services/: checkpoint_store.py  session_store.py  streaming_form_parser.py  streaming_pipe.py  streaming_upload.py  tag_store.py  websockets.py
tests/: conftest.py  test_albums.py  test_assets.py  test_auth_middleware.py  test_cookies.py  test_error_mapping.py  test_oauth.py  test_oauth_cookie_security.py  test_people.py  test_timeline.py  test_token_refresh.py
tools/: dump_openapi_json.py  extract-immich-web.py  extract-immich-web.sh  generate_immich_models.py  spec_preprocess.py  validate_api_compatibility.py
utils/: jwt_encryption.py  livephoto.py  redis_client.py  redis_protocols.py  streaming_form_parser.py  streaming_pipe.py  user_agent.py
(+115 files in other folders)
