[project]
name = "immich-adapter"
version = "0.1.0"
description = "FastAPI server that adapts the Immich API to the Gumnut API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.0",
    "fastapi[standard]>=0.135.2",
    "gumnut-sdk>=0.66.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "python-socketio>=5.13.0",
    "redis~=5.0",
    "sentry-sdk[fastapi,httpx]>=2.37.1",
    "shortuuid>=1.0.13",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "ty>=0.0.24",
]

[tool.ty.src]
exclude = ["tools/"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
