[project]
name = "immich-adapter"
version = "0.1.0"
description = "FastAPI server that adapts the Immich API to the Gumnut API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.0",
    "fastapi[standard]>=0.135.2",
    "gumnut-sdk>=0.74.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "python-socketio>=5.13.0",
    "redis~=5.0",
    "sentry-sdk[fastapi,httpx]>=2.37.1",
    "shortuuid>=1.0.13",
    "user-agents>=2.2.0",
]

[tool.uv]
# Supply chain guard: only resolve packages published ≥ 14 days ago.
# Most compromised packages are detected and yanked within 1–2 weeks,
# so this window lets the ecosystem catch problems before we pull them in.
exclude-newer = "14 days"
# First-party SDK publishes frequently; exempt from the cooldown window.
exclude-newer-package = { gumnut-sdk = false }

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.9.2",
    "socksio>=1.0.0",
]
